Mise en place de l'administrateur

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,26 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/quizzai-logo.png" />
+    <!-- Favicon de base -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <!-- Favicon SVG pour les navigateurs modernes -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Favicon PNG standard -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- Icônes pour les différentes tailles -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <!-- Icône pour iOS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- Manifest pour PWA -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Couleur du thème pour les navigateurs modernes -->
+    <meta name="theme-color" content="#2563eb" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuizzAi</title>
+    <title>QuizzAi - Générateur de QCM</title>
+    <!-- Description du site pour les moteurs de recherche -->
+    <meta name="description" content="Créez des QCM et quiz à partir de vos documents PDF avec QuizzAi" />
   </head>
   <body>
     <div id="root"></div>
